[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/menu/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.2

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2

[sub_resource type="Animation" id=3]
length = 0.2

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.042
anchor_top = 0.239
anchor_right = 0.958
anchor_bottom = 0.974
margin_left = -0.240002
margin_top = -0.420013
margin_right = 0.239929
margin_bottom = -0.220093
rect_pivot_offset = Vector2( -1251, -351.5 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 660.0
margin_bottom = 178.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "PLAY"

[node name="Shop" type="Button" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 660.0
margin_bottom = 283.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "SHOP"

[node name="Statistics" type="Button" parent="VBoxContainer"]
margin_top = 293.0
margin_right = 660.0
margin_bottom = 388.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "HALL"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 398.0
margin_right = 660.0
margin_bottom = 493.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "SETTINGS"

[node name="Info" type="Button" parent="VBoxContainer"]
margin_top = 503.0
margin_right = 660.0
margin_bottom = 598.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "INFO"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 608.0
margin_right = 660.0
margin_bottom = 703.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "EXIT"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 713.0
margin_right = 660.0
margin_bottom = 753.0
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="SimonDalvai" type="Button" parent="VBoxContainer"]
margin_top = 763.0
margin_right = 660.0
margin_bottom = 858.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "simondalvai.org"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
anims/FirstFadeIn = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="VBoxContainer/Statistics" to="." method="_on_Statistics_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxContainer/SimonDalvai" to="." method="_on_SimonDalvai_pressed"]
